Fixes #1131: Analytics box do not overlap without infobox

--- a/src/app/infobox/infobox.component.css
+++ b/src/app/infobox/infobox.component.css
@@ -20,6 +20,7 @@ img{
   transition: 0.3s;
   width: 454px;
   min-height: 240px;
+  margin-top: -18%;
 }
 
 /* Heading */
